create module generic

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <modules>
         <module>language/dynamic-proxy</module>
         <module>libraries/bytecode</module>
+        <module>language/generic</module>
     </modules>
 
 
