--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>language/dynamic-proxy</module>
         <module>libraries/bytecode</module>
         <module>language/generic</module>
+        <module>language/annotation</module>
     </modules>
 
 
