--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>libraries/bytecode</module>
         <module>language/generic</module>
         <module>language/annotation</module>
+        <module>language/concurrent</module>
     </modules>
 
 
